# CageyProject

./: .env.example  .gitignore  LICENSE  README.md  bureaucract-skill.skill  cagey-project.skill  pyproject.toml  requirements-dev.txt  requirements.txt  skills-lock.json
cagey/: __init__.py  cli.py  config.py
cagey/analysis/: __init__.py  analyzer.py  client.py  models.py  prompts.py
cagey/ingest/: __init__.py  base.py  csv_parser.py  json_parser.py  txt_parser.py
cagey/output/: __init__.py  charts.py  terminal.py
cagey/pipeline/: __init__.py  runner.py  sorter.py
tests/: test_analyzer.py  test_parsers.py  test_sorter.py
tests/fixtures/: sample.csv  sample.json  sample.txt
